fixed grid layout issues in Projects and Skills

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,6 +5,7 @@
   color: #000000;
 
   width: 90%;
+  height: fit-content; /* important for independent card heights */
   max-width: 350px;
   margin-top: 1.2rem;
   margin-bottom: 1.5rem;
